# bim-ontology

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PROJECTS.json  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: MANIFEST.md
.github/workflows/: ci.yml  deploy-site.yml
config/: category-to-bso.yaml
data/audit/: ifc_audit_report.json
data/ontology/: classification_rules.json  custom_schema.json  lean_schema.ttl  shapes.ttl
data/test/: awp_sample.csv  schedule_sample.csv
docs/: CONTEXT.md  DASHBOARD-GUIDE.md  DASHBOARD-MANUAL.md  DEPLOY.md  DEVLOG.md  GUIDE.md  PLAN-LEAN-LAYER.md  PRD.md  PROGRESS.md  PROPERTY-INJECTION-COMPARISON.md  RELEASE-v1.0.md  RETROSPECTIVE.md  TECH-SPEC.md
docs/planning/: CONTEXT.md  PLAN-REVIEW-PHASE15-17.md  PRD.md
docs/technical/: INTEGRATION-STRATEGY.md  (+1 more)
examples/: 01_basic_usage.py  02_statistics.py  03_element_query.py  04_hierarchy.py  05_custom_sparql.py
references/: BIM 시맨틱 파이프라인 구축 조사.md  IFC_to_Semantic_Pipeline_Report_KR.md  compass_artifact_wf-f8bfc1ad-cc41-4a0e-8da5-155cd268b467_text_markdown.md  semantic-bim-comprehensive-report-kr.md  total-summary-kr.md
schemas/: hierarchy-csv-schema.json
scripts/: audit_ifc.py  benchmark_phase4.py  load_test.py  poc_ifc_inject.py  poc_schema_inject.py  test_ifc_loading.py  test_ifc_properties.py  test_rdf_conversion.py  validate_rdf.py
site/: astro.config.mjs  package-lock.json
tests/: conftest.py  test_api.py  test_client.py  test_integration.py  test_lean_objectid.py  test_phase4.py
(+94 files in other folders)
