[project]
name = "bim-ontology"
version = "0.1.0"
description = "BIM Ontology Dashboard and API"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "owlrl>=7.1.4",
    "python-multipart>=0.0.22",
]

[tool.pytest.ini_options]
markers = [
    "requires_ifc: marks tests that require IFC test data (deselect with '-m \"not requires_ifc\"')",
]
